--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="styles3.css" rel="stylesheet">
-    <script src="script3.js" defer></script>
+    <link href="styles.css" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 
 
